--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Medidor De Bateria</title>
 </head>
 <body>
-    
+    <h1>Your battery percentage is</h1>
+    <div class="battery"></div>
+    <p>With this app we should be able to see our battery level</p>
 </body>
 </html>
